--- a/app/src/main/res/layout/fragment_create_note.xml
+++ b/app/src/main/res/layout/fragment_create_note.xml
@@ -4,8 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/container_constraints"
     android:background="@color/primaryDark"
-    tools:context=".ui.fragments.CreateNoteFragment">
+    tools:context=".ui.fragments.operation.OperationsFragment">
 <ImageView
     android:id="@+id/back"
     android:layout_width="@dimen/_23sdp"
@@ -20,7 +21,7 @@
     android:focusable="true"
     android:contentDescription="@string/back" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/done"
         android:layout_width="@dimen/_25sdp"
         android:layout_height="@dimen/_30sdp"
@@ -31,8 +32,8 @@
         android:layout_marginEnd="@dimen/_7sdp"
         android:layout_marginTop="@dimen/_13sdp"
         android:padding="@dimen/_3sdp"
-        android:background="@color/black"
         android:contentDescription="@string/done_note"
+        android:background="?selectableItemBackground"
         android:clickable="true"
         android:focusable="true" />
     <ImageView
@@ -92,8 +93,10 @@
         android:hint="@string/title"
         android:layout_marginStart="@dimen/_7sdp"
         android:inputType="text"
+        android:text=""
         android:maxLines="1"
         android:textColor="@color/white"
+        android:textColorHighlight="@color/white"
         android:textColorHint="@color/white"
         android:textSize="@dimen/_22ssp"
         app:layout_constraintTop_toBottomOf="@id/choiceColor_rv"
@@ -115,193 +118,17 @@
         tools:ignore="LabelFor"
         android:layout_marginStart="@dimen/_10sdp"
         tools:layout_editor_absoluteX="13dp" />
-<!--    <LinearLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:gravity="center"-->
-<!--        android:orientation="horizontal"-->
-<!--        android:padding="7sp">-->
-
-<!--        <FrameLayout-->
-<!--            android:id="@+id/fNoteBlue"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_margin="3sp">-->
-
-<!--            <View-->
-<!--                android:layout_width="33sdp"-->
-<!--                android:layout_height="33dp"-->
-<!--                android:background="@drawable/notes_color_blue" />-->
-
-<!--            <ImageView-->
-<!--                android:id="@+id/imgNoteBlue"-->
-<!--                android:layout_width="20sp"-->
-<!--                android:layout_height="20sp"-->
-<!--                android:layout_gravity="center"-->
-<!--                app:tint="@color/black" />-->
-
-<!--        </FrameLayout>-->
-
-<!--        <FrameLayout-->
-<!--            android:id="@+id/fNoteCyan"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_margin="3sp">-->
-
-<!--            <View-->
-<!--                android:layout_width="33sp"-->
-<!--                android:layout_height="33sp"-->
-<!--                android:background="@drawable/notes_color_cyan" />-->
-
-<!--            <ImageView-->
-<!--                android:id="@+id/imgNoteCyan"-->
-<!--                android:layout_width="20sp"-->
-<!--                android:layout_height="20sp"-->
-<!--                android:layout_gravity="center"-->
-<!--                app:tint="@color/black" />-->
-
-<!--        </FrameLayout>-->
-
-<!--        <FrameLayout-->
-<!--            android:id="@+id/fNoteGreen"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_margin="3sp">-->
-
-<!--            <View-->
-<!--                android:layout_width="33sp"-->
-<!--                android:layout_height="33sp"-->
-<!--                android:background="@drawable/notes_color_green" />-->
-
-<!--            <ImageView-->
-<!--                android:id="@+id/imgNoteGreen"-->
-<!--                android:layout_width="17dp"-->
-<!--                android:layout_height="20sp"-->
-<!--                android:layout_gravity="center"-->
-<!--                app:tint="@color/black" />-->
-
-<!--        </FrameLayout>-->
-
-<!--        <FrameLayout-->
-<!--            android:id="@+id/fNoteOrange"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_margin="3sp">-->
-
-<!--            <View-->
-<!--                android:layout_width="33sp"-->
-<!--                android:layout_height="33sp"-->
-<!--                android:background="@drawable/notes_color_orange" />-->
-
-<!--            <ImageView-->
-<!--                android:id="@+id/imgNoteOrange"-->
-<!--                android:layout_width="16dp"-->
-<!--                android:layout_height="20sp"-->
-<!--                android:layout_gravity="center"-->
-<!--                app:tint="@color/black" />-->
-
-<!--        </FrameLayout>-->
-
-<!--        <FrameLayout-->
-<!--            android:id="@+id/fNotePurple"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_margin="3sp">-->
-
-<!--            <View-->
-<!--                android:layout_width="33sp"-->
-<!--                android:layout_height="33sp"-->
-<!--                android:background="@drawable/notes_color_purple" />-->
-
-<!--            <ImageView-->
-<!--                android:id="@+id/imgNotePurple"-->
-<!--                android:layout_width="20sp"-->
-<!--                android:layout_height="20sp"-->
-<!--                android:layout_gravity="center"-->
-<!--                app:tint="@color/black" />-->
-
-<!--        </FrameLayout>-->
-
-<!--        <FrameLayout-->
-<!--            android:id="@+id/fNoteRed"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_margin="3sp">-->
-
-<!--            <View-->
-<!--                android:layout_width="33sp"-->
-<!--                android:layout_height="33sp"-->
-<!--                android:background="@drawable/notes_color_red" />-->
-
-<!--            <ImageView-->
-<!--                android:id="@+id/imgNoteRed"-->
-<!--                android:layout_width="20sp"-->
-<!--                android:layout_height="20sp"-->
-<!--                android:layout_gravity="center"-->
-<!--                app:tint="@color/black" />-->
-
-<!--        </FrameLayout>-->
-
-<!--        <FrameLayout-->
-<!--            android:id="@+id/fNoteYellow"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_margin="3sp">-->
-
-<!--            <View-->
-<!--                android:layout_width="33sp"-->
-<!--                android:layout_height="33sp"-->
-<!--                android:background="@drawable/notes_color_yellow" />-->
-
-<!--            <ImageView-->
-<!--                android:id="@+id/imgNoteYellow"-->
-<!--                android:layout_width="20sp"-->
-<!--                android:layout_height="20sp"-->
-<!--                android:layout_gravity="center"-->
-<!--                app:tint="@color/black" />-->
-
-<!--        </FrameLayout>-->
-
-<!--        <FrameLayout-->
-<!--            android:id="@+id/fNoteBrown"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_margin="3sp">-->
-
-<!--            <View-->
-<!--                android:layout_width="33sp"-->
-<!--                android:layout_height="33sp"-->
-<!--                android:background="@drawable/notes_color_brown" />-->
-
-<!--            <ImageView-->
-<!--                android:id="@+id/imgNoteBrown"-->
-<!--                android:layout_width="20sp"-->
-<!--                android:layout_height="20sp"-->
-<!--                android:layout_gravity="center"-->
-<!--                app:tint="@color/black" />-->
-
-<!--        </FrameLayout>-->
-
-<!--        <FrameLayout-->
-<!--            android:id="@+id/fNoteIndigo"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_margin="3sp">-->
-
-<!--            <View-->
-<!--                android:layout_width="33sp"-->
-<!--                android:layout_height="33sp"-->
-<!--                android:background="@drawable/notes_color_indigo" />-->
-
-<!--            <ImageView-->
-<!--                android:id="@+id/imgNoteIndigo"-->
-<!--                android:layout_width="20sp"-->
-<!--                android:layout_height="20sp"-->
-<!--                android:layout_gravity="center"-->
-<!--                app:tint="@color/black" />-->
-
-<!--        </FrameLayout>-->
 
 
-<!--    </LinearLayout>-->
+        <ImageView
+            android:id="@+id/image_select"
+            android:layout_width="@dimen/_115sdp"
+            android:layout_height="@dimen/_80sdp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/notes_description"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:src="@drawable/dropimage"
+            android:contentDescription="Drop_Your_Image" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
