--- a/app/src/main/res/layout/item_rv_notes.xml
+++ b/app/src/main/res/layout/item_rv_notes.xml
@@ -4,7 +4,15 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constrain_content_item"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_7sdp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
     <androidx.cardview.widget.CardView
         android:id="@+id/card"
         android:layout_width="match_parent"
@@ -13,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:cardCornerRadius="@dimen/_12sdp"
         app:cardElevation="@dimen/_5sdp"
-        android:layout_margin="@dimen/_12sdp"
+        android:layout_margin="@dimen/_7sdp"
         app:cardBackgroundColor="@color/blueDark"
         >
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -45,6 +53,7 @@
             android:fontFamily="@font/calligraffitti"
             android:text="@string/notes"
             android:layout_marginEnd="@dimen/_5sdp"
+            android:visibility="visible"
             android:textColor="@color/white"
             android:textSize="@dimen/_13ssp"
             app:layout_constraintTop_toBottomOf="@id/title_tv"
@@ -55,7 +64,19 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-
     </androidx.cardview.widget.CardView>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:id="@+id/pin_item"
+        android:layout_width="@dimen/_30sdp"
+        android:layout_height="@dimen/_30sdp"
+        android:padding="@dimen/_5sdp"
+        android:src="@drawable/pin_note"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="@dimen/_10sdp"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="@id/constrain_content_item"
+        app:tint="@color/white" />
 </androidx.constraintlayout.widget.ConstraintLayout>
