--- a/app/src/main/res/navigation/note_nav.xml
+++ b/app/src/main/res/navigation/note_nav.xml
@@ -37,5 +37,9 @@
     <dialog
         android:id="@+id/lockDialog"
         android:name="com.android.easynote.ui.fragments.LockDialog"
-        android:label="LockDialog" />
+        android:label="LockDialog" >
+        <argument
+            android:name="type"
+            app:argType="boolean" />
+    </dialog>
 </navigation>
